# Bug-Fab

./: .cursorrules  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-forbidden-strings.txt  AGENTS.md  CHANGELOG.md  Dockerfile  INTEGRATION_AGENTS.md  LICENSE  README.md  SECURITY.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml
adapters/aspnet/: AGENTS.md  BugFab.AspNetCore.sln  LICENSE  README.md
adapters/aspnet/conformance/: README.md  docker-compose.yml  run-conformance.sh
adapters/express/: .gitignore  AGENTS.md  MIGRATION_NOTES.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
adapters/express/conformance/: README.md  docker-compose.yml  run-conformance.sh
adapters/express/examples/: server.ts
adapters/express/src/: errors.ts  github.ts  index.ts  intake.ts  router.ts  types.ts  validation.ts  viewer.ts
adapters/express/tests/: conformance.test.ts  helpers.ts  intake.test.ts  viewer.test.ts
adapters/go-gin/: .gitignore  MIGRATION_NOTES.md  README.md  go.mod
adapters/go-gin/bugfab/: config.go  ratelimit.go  routes.go  routes_test.go  schemas.go  schemas_test.go  storage.go  storage_test.go
adapters/go-gin/conformance/: README.md  docker-compose.yml  run-conformance.sh
adapters/hono/: .gitignore  AGENTS.md  MIGRATION_NOTES.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
adapters/hono/conformance/: README.md  boot.ts  docker-compose.yml  run-conformance.sh
adapters/hono/src/: app.ts  errors.ts  github.ts  index.ts  intake.ts  types.ts  validation.ts  viewer.ts
adapters/hono/tests/: conformance.test.ts  intake.test.ts  viewer.test.ts
adapters/laravel/: .gitignore  MIGRATION_NOTES.md  README.md  composer.json  phpunit.xml
adapters/laravel/config/: bugfab.php
adapters/laravel/conformance/: README.md  docker-compose.yml  run-conformance.sh
adapters/laravel/routes/: bugfab.php
adapters/laravel/src/: BugFabServiceProvider.php
adapters/laravel/tests/: TestCase.php
adapters/phoenix/: .formatter.exs  .gitignore  MIGRATION_NOTES.md  README.md  mix.exs
adapters/phoenix/config/: config.exs
adapters/phoenix/conformance/: README.md  boot.exs  docker-compose.yml  run-conformance.sh
adapters/phoenix/lib/: bug_fab.ex
adapters/phoenix/test/: test_helper.exs
adapters/rails/: .gitignore  AGENTS.md  Gemfile  MIGRATION_NOTES.md  README.md  Rakefile  bug_fab-rails.gemspec
adapters/rails/config/: routes.rb
adapters/rails/conformance/: .gitignore  Gemfile  README.md  conformance_boot.rb  docker-compose.yml  run-conformance.sh
adapters/rails/test/: test_helper.rb
adapters/rust-axum/: .gitignore  Cargo.toml  MIGRATION_NOTES.md  README.md
adapters/rust-axum/bugfab/: Cargo.toml
adapters/rust-axum/bugfab-example/: Cargo.toml
adapters/rust-axum/bugfab-example/src/: main.rs
adapters/rust-axum/bugfab/src/: lib.rs  middleware.rs  routes.rs  schemas.rs
adapters/rust-axum/bugfab/src/storage/: file.rs  mod.rs  report.rs  sqlx.rs
adapters/rust-axum/bugfab/tests/: integration.rs  storage_roundtrip.rs
adapters/rust-axum/conformance/: .gitignore  README.md  docker-compose.yml  run-conformance.sh
adapters/spring-boot-kotlin/: .gitignore  MIGRATION_NOTES.md  README.md  build.gradle.kts  settings.gradle.kts
adapters/spring-boot-kotlin/conformance/: .gitignore  README.md  docker-compose.yml  run-conformance.sh
adapters/sveltekit/: .gitignore  AGENTS.md  MIGRATION_NOTES.md  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vitest.config.ts
adapters/sveltekit/conformance/: .gitignore  README.md  docker-compose.yml  (+5 more)
adapters/vapor/: .gitignore  MIGRATION_NOTES.md  Package.resolved  Package.swift  README.md
bug_fab/: __init__.py  _observability.py  _rate_limit.py  _redact.py  _report_id.py  config.py  intake.py  schemas.py
bug_fab/adapters/: __init__.py
bug_fab/conformance/: README.md  __init__.py  fixtures.py  plugin.py
bug_fab/integrations/: __init__.py  _base.py  discord.py  github.py  linear.py  pagerduty.py  slack.py  teams.py  webhook.py
bug_fab/routers/: __init__.py  _errors.py  submit.py  viewer.py
bug_fab/storage/: __init__.py  _engine.py  _models.py  _sql_base.py  base.py  files.py  postgres.py  sqlite.py
bug_fab/templates/: _base.html  detail.html  list.html
docs/: ADAPTERS.md  ADAPTERS_REGISTRY.md  CONFORMANCE.md  CONTRIBUTING.md  CSP.md  DEPLOYMENT_OPTIONS.md  FAQ.md  INSTALLATION.md  POC_HOSTING.md  PROTOCOL.md  ROADMAP.md  UPGRADE.md  protocol-schema.json
docs/integrations/: README.md  fastify-nextjs-postgres.AGENTS.md  fastify-nextjs-postgres.md
examples/django-minimal/: README.md  manage.py
examples/error-playground/: README.md  main.py  requirements.txt
examples/fastapi-jinja-docker/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
examples/fastapi-minimal/: .gitignore  README.md  main.py  requirements.txt
examples/flask-minimal/: README.md  main.py  requirements.txt
examples/nextjs-minimal/: .env.example  .gitignore  README.md  next.config.js  package.json
examples/react-spa/: README.md  index.html  package.json  vite.config.ts
marketing-dist/: .gitkeep
scripts/: check_forbidden_strings.py  generate_protocol_schema.py
static/: README.md  bug-fab.css  bug-fab.js
tests/: _helpers.py  conftest.py
tests/e2e/: README.md  _app.py  conftest.py  test_error_playground.py  test_smoke.py
tests/integration/: test_clean_install_smoke.py  test_csp_nonce.py  test_discord_integration.py  test_github_integration.py  test_linear_integration.py  test_pagerduty_integration.py  test_redaction_across_adapters.py  test_slack_integration.py  test_submit_router.py  test_teams_integration.py  test_viewer_router.py  test_webhook_integration.py
tests/unit/: test_config.py  test_intake.py  test_observability.py  test_rate_limit.py  test_redact.py  test_report_id_guard.py  test_schemas.py  test_set_github_link.py  test_storage_files.py  test_storage_postgres.py  test_storage_signatures.py  test_storage_sqlite.py  test_submit_configure.py
types/: protocol.d.ts
(+271 files in other folders)
