[workspace]
resolver = "2"
members = ["bugfab", "bugfab-example"]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Bug-Fab adapter authors"]

[workspace.dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync", "time", "io-util"] }
tower = { version = "0.4", features = ["limit", "util", "buffer"] }
tower-http = { version = "0.5", features = ["limit", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
http = "1"
http-body-util = "0.1"
tracing = "0.1"
sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "json", "migrate"] }
hyper = "1"
