[package]
name = "bugfab"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Rust/Axum adapter draft for the Bug-Fab v0.1 wire protocol"

[features]
default = []
# Enable the sqlx-backed SQLite storage backend.
# NB: enabling this feature requires Rust 1.85+ (edition2024-stable) because
# sqlx's transitive deps (`home`, `idna_adapter`) now require it. Default
# build (file-storage only) stays on the documented 1.75 MSRV.
sqlx = ["dep:sqlx"]

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tower = { workspace = true, features = ["util"] }
http-body-util = { workspace = true }
hyper = { workspace = true }
tempfile = "=3.10.1"
serde_json = { workspace = true }
